kubernetes/apps/home-assistant/mosquitto.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: home-assistant
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mosquitto
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: home-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mosquitto
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mosquitto
    spec:
      serviceAccountName: mosquitto
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1883
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        runAsUser: 1883
        runAsGroup: 1883
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: mosquitto
          image: docker.io/library/eclipse-mosquitto:2.1.2-alpine@sha256:6f8d8a947c506f8a2290ec65cd4bd2bc7cb4d43fb5f6271f861cb013e2ef9797
          imagePullPolicy: IfNotPresent
          args:
            - mosquitto
            - -c
            - /mosquitto/config/mosquitto.conf
          ports:
            - name: mqtt
              containerPort: 1883
          readinessProbe:
            tcpSocket:
              port: mqtt
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: mqtt
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: config
              mountPath: /mosquitto/config
              readOnly: true
            - name: data
              mountPath: /mosquitto/data
      volumes:
        - name: config
          configMap:
            name: mosquitto
        - name: data
          persistentVolumeClaim:
            claimName: mosquitto-data
