kubernetes/apps/home-assistant/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  parentRefs:
    - name: home-assistant
  hostnames:
    - home-assistant.kakatkarakshay.dev
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8123
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: node-red
  namespace: home-assistant
spec:
  parentRefs:
    - name: node-red
  hostnames:
    - node-red.kakatkarakshay.dev
  rules:
    - backendRefs:
        - name: node-red
          port: 1880
